--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h2 {
 h3 {
   font-size: 24px;
   opacity: 0.7;
+  margin-top: 10px;
 }
 
 p {
@@ -36,7 +37,7 @@ img {
 }
 .navigation-links {
   display: flex;
-  margin-top: 40px;
+  margin-top: 25px;
   justify-content: center;
 }
 
@@ -136,10 +137,41 @@ h2.greeting {
     margin: 0 30px;
     padding: 0 10px 0 0;
   }
+  h1 {
+    text-align: center;
+    font-size: 38px;
+  }
+  h2 {
+    text-align: center;
+    font-size: 30px;
+  }
+  h3 {
+    text-align: center;
+    font-size: 20px;
+  }
+  .email-link {
+    font-size: 22px;
+  }
+  .navigation-links {
+    font-size: 12px;
+  }
 }
 @media (min-width: 769px) and (max-width: 992px) {
   .container-size {
     margin: 0 40px;
     padding: 0 15px 0 0;
+  }
+  h1 {
+    text-align: center;
+    font-size: 70px;
+  }
+  h2 {
+    text-align: center;
+    font-size: 60px;
+  }
+}
+@media (max-width: 399px) {
+  .flag {
+    display: block;
   }
 }
