--- a/style.css
+++ b/style.css
@@ -164,10 +164,17 @@ h2.greeting {
   .hidden {
     display: block;
   }
-  .small-image {
+  .hidden-image {
     display: flex;
     justify-content: center;
-    padding-right: 40px;
+    padding-right: 30px;
+  }
+  .projct-button {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 25px;
+    width: 150px;
+    font-size: 14px;
   }
 }
 @media (min-width: 769px) and (max-width: 992px) {
