--- a/style.css
+++ b/style.css
@@ -175,6 +175,9 @@ h2.greeting {
     margin-bottom: 30px;
     max-width: 70%;
   }
+  .container {
+    margin: 0 auto;
+  }
 }
 @media (min-width: 769px) and (max-width: 992px) {
   .nav-size {
@@ -211,6 +214,9 @@ h2.greeting {
   .about-image {
     margin-bottom: 30px;
     max-width: 70%;
+  }
+  .container {
+    margin: 0 auto;
   }
 }
 @media (max-width: 399px) {
