--- a/style.css
+++ b/style.css
@@ -135,10 +135,13 @@ h2.greeting {
 .hidden {
   display: none;
 }
+.nav-size {
+  margin-left: 50px;
+}
 @media (max-width: 768px) {
   .nav-size {
     margin-left: 30px;
-    padding: 0 40px 0 0;
+    padding: 0 30px 0 0;
   }
   h1 {
     text-align: center;
@@ -182,7 +185,7 @@ h2.greeting {
 @media (min-width: 769px) and (max-width: 992px) {
   .nav-size {
     margin-left: 40px;
-    padding: 0 60px 0 0;
+    padding: 0 40px 0 0;
   }
   h1 {
     text-align: center;
@@ -224,7 +227,7 @@ h2.greeting {
     display: block;
   }
   .nav-size {
-    padding: 0 35px 0 0;
+    padding: 0 10px 0 0;
   }
   .about-image {
     margin-bottom: 0;
