--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ h2.greeting {
     display: block;
     margin: 0 auto;
     margin-bottom: 25px;
+    margin-top: 25px;
     width: 150px;
     font-size: 14px;
   }
@@ -211,6 +212,7 @@ h2.greeting {
     display: block;
     margin: 0 auto;
     margin-bottom: 25px;
+    margin-top: 25px;
     width: 150px;
     font-size: 14px;
   }
